src/objects/MDM_Configuration__c.object
<CustomObject>
    <description>The object contains all configuration values for MDM Location Reference app.</description>
    <fields>
        <fullName>ConfigDescription__c</fullName>
        <description>This field used to describe the row.</description>
        <label>ConfigDescription</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>This field used to describe the row.</description>
        <inlineHelpText>This will be used When the value is too big.</inlineHelpText>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>This is for the configuration field(a) Name &amp; Value pairs. 
Name stored in Name and the  values stored here.</description>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MDM_Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Value__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>MDM_Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDM_Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>MDM_configuration_Name_Is_Required</fullName>
        <active>true</active>
        <description>MDM_configuration_Name_Is_Required</description>
        <errorConditionFormula>VLOOKUP($ObjectType.MDM_Configuration__c.Fields.Id, $ObjectType.MDM_Configuration__c.Fields.Name, Name) &lt;&gt; Id</errorConditionFormula>
        <errorMessage>MDM configuration name is not unique.</errorMessage>
    </validationRules>
</CustomObject>